fixed overlapping issue when resizing y-dir

--- a/src/App.scss
+++ b/src/App.scss
@@ -1,6 +1,5 @@
 .App-container {
-    display: flex;
-    flex-direction: column;
+    display: inline-block;
     margin-left: 1.5rem;
     margin-right: 1.5rem;
 }
