--- a/src/components/Hero/Hero.scss
+++ b/src/components/Hero/Hero.scss
@@ -1,7 +1,7 @@
 .Hero {
     width: 90vw;
     height: 30vh;
-    display: block;
+    display: inline-block;
 }
 
 .Hero-main-text {
