--- a/src/components/KeyFeatures/KeyFeatures.scss
+++ b/src/components/KeyFeatures/KeyFeatures.scss
@@ -1,4 +1,5 @@
 .key-features-container {
+    display: inline-block;
     margin-top: 80px;
 }
 
@@ -11,4 +12,5 @@
 
 .features {
     background-color: #1F2028;
+    width: 90vw;
 }
